<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="@dimen/radius8dp"
        app:cardElevation="0dp"
        app:contentPadding="@dimen/padding12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="93dp"
                android:layout_height="93dp"
                app:cardCornerRadius="@dimen/radius8dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/profile" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding12dp"
                android:paddingEnd="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:fontFamily="@font/dms_ans_bold"
                        android:text="@string/user_name_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_circular"
                        android:fontFamily="@font/dms_ans_medium"
                        android:paddingHorizontal="@dimen/padding8dp"
                        android:paddingVertical="@dimen/padding4dp"
                        android:text="@string/hours_value"
                        android:textColor="@color/white"

                        android:textSize="@dimen/txt12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/padding8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:alpha="0.87"
                        android:fontFamily="@font/dms_ans_regular"
                        android:text="@string/job_title"
                        android:textColor="#FF122940"
                        android:textSize="@dimen/txt12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.60"
                        android:fontFamily="@font/dms_ans_medium"
                        android:text="@string/country_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/padding8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:alpha="0.60"
                        android:drawablePadding="@dimen/padding4dp"
                        android:fontFamily="@font/dms_ans_regular"
                        android:gravity="center"
                        android:text="@string/location_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt12sp"
                        app:drawableLeftCompat="@drawable/location" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="18dp"
                        android:layout_weight="1"
                        android:alpha="0.38"
                        android:fontFamily="@font/dms_ans_regular"
                        android:gravity="end"
                        android:text="@string/last_seen_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dms_ans_regular"
                        android:text="@string/review_count_value"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/padding4dp"
                        android:fontFamily="@fonts/dms_ans_bold"
                        android:gravity="center"
                        android:paddingStart="@dimen/padding8dp"
                        android:paddingEnd="0dp"
                        android:text="@string/rating_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt12sp"
                        app:drawableEndCompat="@drawable/star"
                        app:drawableTint="@color/yellow" />

                </LinearLayout>
            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>